--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,9 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <div>
+    <button mat-raised-button color="primary">Button</button>
+    <mat-icon>menu</mat-icon>
+    <mat-slider></mat-slider>
+  </div>
 </ul>
-
