--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-  <div>
+  <div fxLayout="column">
     <button mat-raised-button color="primary">Button</button>
     <mat-icon>menu</mat-icon>
     <mat-slider></mat-slider>
