Create products menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <mat-drawer #drawer [mode]="drawerMode" [opened]="drawerOpened">
     <mat-list style="width: 200px">
       <mat-list-item (click)="onSelectMenu('dashboard')">Dashboard</mat-list-item>
+      <mat-list-item (click)="onSelectMenu('products')">Products</mat-list-item>
       <mat-list-item (click)="onSelectMenu('profile')">Profile</mat-list-item>
     </mat-list>
   </mat-drawer>
