Use zone.run to trigger rerender from product service

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,5 +2,5 @@
   products works!
 </p>
 <ul>
-  <li *ngFor="let product of products">{{ product.name }} - {{ product.price }}</li>
+  <li *ngFor="let product of productService.products$ | async">{{ product.name }} - {{ product.price }}</li>
 </ul>
